--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "gendiff2",
   "version": "0.1.0",
-  "description": "Compares two configuration files and shows a difference",
+  "description": "Compare two config files and show the difference.",
   "main": "index.js",
   "bin": {
     "gendiff": "dist/bin/gendiff.js"
   },
   "scripts": {
     "prepublish": "npm run build",
+    "build": "NODE_ENV=production babel src --out-dir dist --source-map inline",
     "babel-node": "babel-node",
-    "build": "NODE_ENV=production babel src --out-dir dist --source-maps inline",
     "eslint": "eslint",
     "test": "jest"
   },
@@ -36,6 +36,6 @@
   },
   "dependencies": {
     "commander": "*",
-    "lodash": "*"
+    "jest": "*"
   }
 }
