--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "prepublish": "npm run build",
     "build": "NODE_ENV=production babel src --out-dir dist --source-map inline",
     "babel-node": "babel-node",
-    "eslint": "eslint",
-    "test": "jest"
+    "eslint": "eslint"
   },
   "repository": {
     "type": "git",
@@ -31,11 +30,9 @@
     "babel-preset-stage-0": "*",
     "eslint": "^3.19.0",
     "eslint-config-airbnb-base": "^11.2.0",
-    "eslint-plugin-import": "^2.2.0",
-    "jest": "*"
+    "eslint-plugin-import": "^2.2.0"
   },
   "dependencies": {
-    "commander": "*",
-    "jest": "*"
+    "commander": "*"
   }
 }
