--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,6 +1,3 @@
-plugins:
-  - jest
-
 env:
   node: true
   jest: true
@@ -9,7 +6,8 @@ parser: babel-eslint
 
 extends:
   - 'airbnb-base'
-  - 'plugin:jest/recommended'
-  
+  - plugin:import/errors
+  - plugin:import/warnings
+
 rules:
-  no-consol: 0
+  no-console: 0
