--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gendiff2",
+  "name": "gendiff-rbt200",
   "version": "0.1.0",
   "description": "Compare two config files and show the difference.",
   "main": "index.js",
