--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gendiff-rbt200",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "description": "Compare two config files and show the difference.",
   "main": "index.js",
   "bin": {
@@ -10,7 +10,8 @@
     "prepublish": "npm run build",
     "build": "NODE_ENV=production babel src --out-dir dist --source-map inline",
     "babel-node": "babel-node",
-    "eslint": "eslint"
+    "eslint": "eslint",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -30,9 +31,11 @@
     "babel-preset-stage-0": "*",
     "eslint": "^3.19.0",
     "eslint-config-airbnb-base": "^11.2.0",
-    "eslint-plugin-import": "^2.2.0"
+    "eslint-plugin-import": "^2.2.0",
+    "jest": "*"
   },
   "dependencies": {
-    "commander": "*"
+    "commander": "*",
+    "lodash": "*"
   }
 }
