--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
     "eslint": "^3.19.0",
     "eslint-config-airbnb-base": "^11.3.1",
     "eslint-plugin-import": "^2.7.0",
-    "jest": "^20.0.4",
-    "lint": "^1.1.2"
+    "jest": "^20.0.4"
   },
   "dependencies": {
     "commander": "^2.11.0",
