--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "homepage": "https://github.com/rbt200/project-lvl2-s105#readme",
   "devDependencies": {
     "babel-cli": "^6.24.1",
-    "babel-core": "*",
+    "babel-core": "^6.25.0",
     "babel-eslint": "^7.2.3",
     "babel-preset-env": "^1.6.0",
     "babel-preset-stage-0": "^6.24.1",
@@ -38,6 +38,6 @@
     "commander": "^2.11.0",
     "ini": "^1.3.4",
     "js-yaml": "^3.9.0",
-    "lodash": "*"
+    "lodash": "^4.17.4"
   }
 }
